[package]
name = "enricher"
version = "0.1.0"
authors = ["Yash Gadgil <102785510+yash-gadgil@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
